Fix tests by adding jvm args for unamed modules.